# AgentX

./: .gitignore  README-DEPLOYMENT.md  README.md  build-and-push.sh
be/: Dockerfile  README.md  pyproject.toml  test.py
be/app/: main.py
be/app/agent/: agent.py  event_models.py  event_serializer.py
be/app/mcp/: mcp.py
be/app/routers/: agent.py  chat_record.py  mcp.py  schedule.py
be/app/schedule/: __init__.py  models.py  service.py
be/app/utils/: aws_config.py  file_processor.py
cdk/: .gitignore  README.md  bun.lockb  cdk.context.json  cdk.json  deploy.sh  package-lock.json  package.json
cdk/lib/: agent-schedule-stack.ts  agentx-stack-combined.ts  agentx-stack.ts
cdk/lib/lambda/agent-schedule-executor/: index.ts  package.json  tsconfig.json
fe/: Dockerfile  README.md  bun.lockb  index.html  nginx.conf  package-lock.json  package.json
fe/src/: App.tsx
fe/src/components/: index.ts
fe/src/components/agent/: Agent.tsx
fe/src/components/chat/: Chat.tsx  ChatInput.tsx  ChatList.tsx  index.ts
fe/src/components/layout/: Layout.tsx
fe/src/components/mcp/: MCP.tsx  index.ts
fe/src/components/schedule/: Schedule.tsx
fe/src/components/sidebar/: Sidebar.tsx
fe/src/constants/: index.ts
fe/src/hooks/: useAgent.ts
fe/src/services/: api.ts
fe/src/store/: agentStore.ts  index.ts  mcpStore.ts  scheduleStore.ts
fe/src/styles/: agentx-welcome.css  highlight.css  html-tabs.css  index.ts  markdown.css  tool-result.css
fe/src/types/: index.ts
fe/src/utils/: agentEventFormatter.ts
mcp/aws-db/: Dockerfile  aws_db_evaluation_mcp_log.out  pyproject.toml
mcp/aws-db/db_evaluation_server/: Dockerfile  README.md  __init__.py  __main__.py  rds_aurora_pricing_analyzer.py  server.py
mcp/doc-reading-mcp/: .gitignore  README.md  pyproject.toml
mcp/doc-reading-mcp/src/doc_reading_mcp/: __init__.py  __main__.py  doc_convert.py
mcp/duckdb/: Dockerfile  map_application.duckdb
mcp/mysql/: Dockerfile  README.md  bun.lockb  package.json
mcp/mysql/src/: config.ts  index.ts
mcp/mysql/src/db/: connection-test.ts  mysql-connection.ts
mcp/mysql/src/mcp/: server.ts
mcp/opensearch/: Dockerfile  README.md  cluster.yaml
mcp/redshift/: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
mcp/redshift/redshift_mcp_server/: __main__.py  server.py
