[project]
name = "aws-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.16",
    "mcp>=1.13.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
[project.scripts]
db-evaluation-server = "db_evaluation_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db_evaluation_server"]

[tool.pyright]
include = ["db_evaluation_server"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]