[project]
name = "doc-reading-mcp"
version = "0.1.1"
description = "A simple doc reader and converter MCP service to pdf, docx and markdown"
readme = "README.md"
authors = [
    { name = "MatiasFrydman", email = "78177534+mffrydman@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "build>=1.2.2.post1",
    "marker-pdf==1.6.2",
    "mcp[cli]>=1.6.0",
    "pypandoc>=1.15",
    "transformers==4.50.3",
    "twine>=6.1.0",
    "fastmcp"
]

[project.scripts]
doc-reading-mcp = "doc_reading_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
