[project]
name = "redshift-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "python-dotenv>=1.1.0",
    "redshift-connector>=2.1.5",
    "anyio>=4.5",
    "click>=8.1.0",
    "uvicorn"
]
[project.scripts]
redshift-mcp-server = "redshift_mcp_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redshift_mcp_server"]

[tool.pyright]
include = ["redshift_mcp_server"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
